// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Spinner Defaults play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r2:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       id="htmlid"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 dummyClassname"
       lang="nb"
       data-testid="123ID"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-htmlid"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithColorsDarkBackground smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_white_wnf1f_19 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:rh:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithColorsLightBackground smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:rf:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:rg:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Henter innhold
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithHideText play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:ri:"
          class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66"
    >
      laster data
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithPercent play-test 1`] = `
<div data-test-block="true">
  <div aria-labelledby="title-:rj:"
       role="progressbar"
       aria-valuemin="0"
       aria-valuemax="100"
       aria-busy="true"
       aria-valuenow="50"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:rj:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Laster inn (50 %)
    </span>
  </div>
  <div class="_srOnly_wnf1f_70"
       aria-atomic="true"
       aria-live="polite"
  >
    50 %
  </div>
</div>
`;

exports[`Tester/Spinner WithRef play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25"
       id="dummyIdForwardedFromRef"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r0:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Laster inn
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithSizeAndPosition smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r3:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r4:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r5:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_small_wnf1f_22 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r6:"
          class="_spinnerTitle_wnf1f_59"
    >
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_medium_wnf1f_25 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r7:"
          class="_spinnerTitle_wnf1f_59"
    >
      henter innhold
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_large_wnf1f_28 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r8:"
          class="_spinnerTitle_wnf1f_59"
    >
      henter innhold
    </span>
  </div>
</div>
`;

exports[`Tester/Spinner WithSizeAndPositionLongText smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:r9:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_medium_wnf1f_25 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:ra:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexColumn_wnf1f_32 _spinner_large_wnf1f_28 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:rb:"
          class="_spinnerTitle_wnf1f_59  _spinnerTitle_centerText_wnf1f_66"
    >
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_small_wnf1f_22 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:rc:"
          class="_spinnerTitle_wnf1f_59"
    >
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_medium_wnf1f_25 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:rd:"
          class="_spinnerTitle_wnf1f_59"
    >
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
       class="_spinner_wnf1f_5 _spinner_black_wnf1f_13 _spinner_flexRow_wnf1f_36 _spinner_large_wnf1f_28 bottomSpacingXL"
  >
    <div class="_spinnerAnimation_wnf1f_40">
    </div>
    <span id="title-:re:"
          class="_spinnerTitle_wnf1f_59"
    >
      Henter årsmiddelkurs fra valutakurstjenesten
    </span>
  </div>
</div>
`;
